# program-crawler

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  run.sh
.claude/skills/research-agent/: SKILL.md
.claude/skills/research-agent/references/: crawl-strategies.md  data-quality.md  university-registry.md
.github/workflows/: ci.yml
agents/: agent_contracts.md  agent_exporter.md  agent_extractor.md  agent_fetcher_evidence.md  agent_lead.md
app/: runner.py  skills_loader.py
app/agent/: __init__.py  action_picker.py  evaluator.py  memory.py  planner.py  research_agent.py
app/evidence/: capture.py
app/export/: xlsx_exporter.py
app/extractor/: llm_extractor.py  rule_extractors.py
app/fetcher/: browser_fetcher.py  fetch_router.py  google_search.py  http_fetcher.py
app/llm/: __init__.py  base.py  gemini_client.py
app/log/: __init__.py  config.py  llm_logger.py  run_tracker.py
app/plugins/: generic.py
app/tools/: __init__.py  base.py  http_tool.py  playwright_tool.py  registry.py  screenshot_tool.py  search_tool.py  stealth_tool.py
app/util/: helpers.py  text_utils.py
app/validate/: validator.py
contracts/: columns.yaml  models.py
skills/: skill.md  soul.md  university_registry.yaml
tests/: test_agent_contracts.py  test_contracts.py  test_exporter.py  test_extractors.py  test_llm_logger.py  test_logging.py  test_memory.py  test_research_exporter.py  test_runner.py  test_text_utils.py  test_validator.py
tests/fixtures/: inputs.csv  inputs.jsonl
