[project]
name = "program-crawler"
version = "0.1.0"
description = "Program information crawler with evidence capture"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "playwright>=1.40",
    "openpyxl>=3.1",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "openai>=1.10",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
]

[project.scripts]
crawl = "app.runner:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
